# VulpesIFF

./: .gitmodules  CMakeLists.txt  LICENSE  notes.txt  now.pasta
.claude/: settings.local.json
.github/workflows/: ci.yml
Codecs/: demo_codecs.c
Codecs/ILBM/: ILBM_Codec.c  ILBM_Codec.h  ILBM_Conversion.c  ILBM_Conversion.h  ILBM_Decompression.c  ILBM_Decompression.h  ILBM_Loader.c  ILBM_Loader.h  ILBM_Types.h
Codecs/Resources/: OhNo.8svx
Codecs/SVX8/: SVX8_Codec.c  SVX8_Codec.h  SVX8_Decompression.c  SVX8_Decompression.h  SVX8_Loader.c  SVX8_Loader.h  SVX8_Types.h
Tests/: CMakeLists.txt  Test.h  test_generate_advanced.c  test_generate_bytes_written.c  test_generate_checksum_advanced.c  test_generate_container_groups.c  test_generate_containers_blobbed.c  test_generate_directives.c  test_generate_encoders.c  test_generate_filler.c  test_generate_flags.c  test_generate_header.c  test_generate_progressive.c  test_generate_validation.c  test_main.c  test_parse_bootstrap.c  test_parse_boundary.c  test_parse_checksum.c  test_parse_checksum_advanced.c  test_parse_chunks.c  test_parse_container_delivery.c  test_parse_containers.c  test_parse_decoders.c  test_parse_decoders_advanced.c  test_parse_flags.c  test_parse_flags_combo.c  test_parse_header_flags.c  test_parse_midstream_sharding.c  test_parse_segments.c  test_roundtrip.c
Tests/ilbm_info/: BitMapHeader.h  IlbmInfo.h  ilbm_decoders.c  ilbm_decoders.h  main.c
Tests/test_harness/: IFF_TestBuilder.c  IFF_TestBuilder.h  IFF_TestChecksumAlgorithm.c  IFF_TestChecksumAlgorithm.h  IFF_TestDecoders.c  IFF_TestDecoders.h  IFF_TestEncoders.c  IFF_TestEncoders.h
documentation/: VulpesIFF-Integration-Guide.md  architecture-writer.md  conformance-tests.md  gaps.md  plan-chk-sum.md  plan-remaining.md  status.md
include/IFF/: IFF_Boundary.h  IFF_CheckedReader.h  IFF_ChecksumAlgorithm.h  IFF_ChecksumCalculator.h  IFF_ChecksumSpan.h  IFF_Checksum_CRC32C.h  IFF_Checksum_CRC64ECMA.h  IFF_Checksum_LRC.h  IFF_Checksum_RFC1071.h  IFF_Chunk.h  IFF_ChunkDecoder.h  IFF_ChunkEncoder.h  IFF_Chunk_Key.h  IFF_Container.h  IFF_ContextualData.h  IFF_ControlledReader.h  IFF_DataPump.h  IFF_DataTap.h  IFF_DirectiveProcessor.h  IFF_DirectiveResult.h  IFF_Directive_IFF_Processor.h  IFF_FormDecoder.h  IFF_FormEncoder.h  IFF_Generator.h  IFF_Generator_Factory.h  IFF_Generator_State.h  IFF_Header.h  IFF_Parser.h  IFF_Parser_Factory.h  IFF_Parser_Session.h  IFF_Parser_State.h  IFF_Reader.h  IFF_ReaderFrame.h  IFF_Scope.h  IFF_Scope_State.h  IFF_Tag.h  IFF_WritePump.h  IFF_WriteScope.h  IFF_WriteTap.h  IFF_Writer.h
src/: IFF_Boundary.c  IFF_ChecksumCalculator.c  IFF_ChecksumSpan.c  IFF_Checksum_CRC32C.c  IFF_Checksum_CRC64ECMA.c  IFF_Checksum_LRC.c  IFF_Checksum_RFC1071.c  IFF_Chunk.c  IFF_ChunkDecoder.c  IFF_Chunk_Key.c  IFF_ContextualData.c  IFF_DataPump.c  IFF_DataTap.c  IFF_Directive_IFF_Processor.c  IFF_FormDecoder.c  IFF_FormEncoder.c  IFF_Generator.c  IFF_Header.c  IFF_Parser.c  IFF_Parser_Factory.c  IFF_Parser_Session.c  IFF_Parser_State.c  IFF_Reader.c  IFF_Scope.c  IFF_Scope_State.c  IFF_Tag.c  IFF_WritePump.c
src/main/c/: IFF_Boundary.c  IFF_ChecksumAlgorithm.c  IFF_Checksum_CRC32C.c  IFF_Checksum_RFC1071.c  IFF_ChunkEncoder.c  IFF_DataPump.c  IFF_FormEncoder.c  IFF_Generator.c  IFF_Generator_Factory.c  IFF_Parser.c  IFF_ReaderFrame.c  IFF_Tag.c  IFF_WriteScope.c  IFF_WriteTap.c  IFF_Writer.c
src/test/c/: CMakeLists.txt  IFF_TestDecoders.c  test_generate_advanced.c  test_generate_basic.c  test_generate_checksum_span.c  test_generate_chunks.c  test_generate_containers.c  test_generate_encoders.c  test_generate_encoders_advanced.c  test_generate_filler.c  test_generate_flags_advanced.c  test_parse_basic.c  test_parse_checksum_algorithms.c  test_parse_containers_advanced.c  test_parse_directives.c  test_parse_midstream.c  test_parse_props.c  test_parse_ref_mandatory.c  test_parse_sharding.c  test_parse_version.c
